# concatenate

./: Dockerfile  README.md  concatenate.py  concatenate_test.py  pyproject.toml
.github/workflows/: testing.yml
