[tool.poetry]
name = "concatenate"
version = "0.1.0"
description = ""
authors = ["515hikaru <12kojima.takahiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
